Update tree control layout in EditLabel() for wxOSX too.

A special preprocessor check for OS X prevented the control from being relaid
out correctly in EditLabel() there, which resulted in problems when trying to
edit a just added item.

Simply remove this check for OS X (and also MSW but this is less important as
this version of the control is almost never used there anyhow) to fix it.

Closes #11179.

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/trunk@72882 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775